# qi

./: .gitignore  .justfile  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflow/: ci.yml  cov.yml
.github/workflows/: ci.yml  cov.yml
benches/: Cargo.toml
crates/benches/: Cargo.toml  unicode.rs
crates/core/: Cargo.toml
crates/core/src/: char_type.rs  lib.rs  range.rs  spacing.rs  table.rs  util.rs
crates/core/tests/: format.rs  format_web.rs
examples/deno/: README.md  main.ts  tsconfig.json
examples/nodejs/: README.md  index.js  package.json
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
examples/web/: index.html
scripts/: build.ts  gen_table.ts  release.ts
tests/: format.bench.js  format.bench.ts  intergration.test.ts  node.ts  server.ts  unicode.test.ts
