[package]
name = "qi-rs"
description = "A tiny, fast, and powerful formatter for documentation, especially for content in CJK."
keywords = ["formatter", "cjk"]

authors.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2.92"

[dev-dependencies]
wasm-bindgen-test = "0.3"